# criutils

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
doc/: api-documentation.rst  conf.py  index.rst  installation.rst  reference.rst
scripts/: tf_transform_broadcaster.py
src/criutils/: __init__.py  array.py  conversions.py  logger.py  misc.py  parameter.py  rviz.py  version.py  vision.py
tests/: test_conversions.py  test_rviz.py
